--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-form": "^1.16.0",
     "@tanstack/react-query": "^5.84.1",
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
